# minify-html

./: Cargo.toml
minify-html-wasm-component/: Cargo.toml
minify-html-wasm-component/src/: bindings.rs  lib.rs
minify-html-wasm-component/wit/: world.wit
